
option java_outer_classname="OpenStreamResponseProtocol";
package Alachisoft.NCache.Common.Protobuf;
message OpenStreamResponse 
{
	optional string lockHandle = 1;
}